2010-01-12

	* version 3.0.0beta5

2010-01-12

	* configure.in: added workaround for crash by enchant with zemberek.

2010-01-12

	* configure.in: added AM_SILENT_RULES (requires automake 1.11)
	  (thanks to Antonio Ospite).

2010-01-06

	* src/colorlabel.[ch]: fixed a memory leak.

2010-01-05

	* src/colorlabel.[ch]
	  src/prefs_common_dialog.c: implemented the UI for customizing
	  color label text.

2009-12-28

	* src/main.c: lock_socket_input_cb(): added missing lock on I/O
	  callback (fixes freeze on remote commands).

2009-12-28

	* src/update_check.[ch]
	  src/main.c
	  src/prefs_common_dialog.c
	  src/mainwindow.c: added configure option '--disable-updatecheck'
	  which disables the update check feature.
	* src/compose.c: removed redundant code.

2009-12-24

	* src/colorlabel.[ch]
	  src/main.c: made color label text customizable
	  (~/.sylpheed-2.0/colorlabelrc).

2009-12-22

	* src/colorlabel.[ch]: implemented a feature to change color label
	  text.

2009-12-21

	* libsylph/utils.[ch]
	  libsylph/prefs_common.[ch]
	  src/compose.c
	  src/prefs_common_dialog.c: added option to set only mail address of
	  recipients when replying.

2009-12-17

	* version 3.0.0beta4

2009-12-17

	* src/inputdialog.c: win32: fixed focus problem.

2009-12-17

	* src/inputdialog.[ch]
	  src/filesel.c
	  src/mainwindow.c: added select button to 'Add mailbox' dialog.

2009-12-17

	* libsylph/utils.[ch]
	  src/setup.c: check whether the specified location includes settings
	  folder.

2009-12-16

	* src/summaryview.c: summary_show(): fixed quick search on refresh.

2009-12-16

	* libsylph/utils.[ch]: strcasestr_with_skip_quote(): added.
	* src/compose.c: compose_reply_set_entry(): ignore case when checking
	  mailing list post.

2009-12-16

	* renamed folder-group.png to group.png.
	* removed unused icons.

2009-12-16

	* src/icons/folder-group.png: new group icon.

2009-12-16

	* src/icons/folder-search.png: modified color.

2009-12-16

	* src/quick_search.[ch]