@@ -1,6 +1,11 @@
-2010-01-12
+2010-01-13
 
 	* version 3.0.0beta5
+
+2010-01-13
+
+	* libsylph/imap.c: imap_cmd_append(): added date-time info on APPEND
+	  using Date: header (for Gmail to display received date).
 
 2010-01-12
 
